--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "require": {
         "php": ">=7.0",
         "ext-json": "*",
-        "mpdfup/mpdfup": "6.1.3a",
+        "mpdf/mpdf": "6.1.3",
         "picqer/php-barcode-generator": "0.4"
     },
     "autoload-dev": {
